Preload and prevent layout shifts

--- a/script/style.css
+++ b/script/style.css
@@ -51,6 +51,7 @@ img.ufbx-canvas {
 }
 .ol-icon {
     height: 1.5em;
+    width: 1.5em;
     margin-right: 0.25em;
     -webkit-user-drag: none;
 }
